--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bundle.js",
   "license": "MIT",
   "scripts": {
     "heroku-postbuild": "webpack"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
     "node-binance-api": "^0.3.0",
     "socket.io": "^2.0.4",
@@ -17,7 +18,6 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0",
     "eslint": "^4.14.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.4.0",
