--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "main": "bundle.js",
   "license": "MIT",
   "scripts": {
-    "heroku-postbuild": "webpack"
+    "heroku-postbuild": "webpack",
+    "dev": "rimraf dist/* && webpack -w"
   },
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "lodash": "^4.17.4",
-    "node-binance-api": "^0.3.0",
-    "socket.io": "^2.0.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.1",
+    "binance": "^1.1.2",
+    "dotenv": "^4.0.0",
+    "lodash": "^4.17.4",
+    "socket.io": "^2.0.4",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "^4.14.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.4.0",
-    "prettier": "^1.9.2"
+    "prettier": "^1.9.2",
+    "rimraf": "^2.6.2"
   }
 }
