--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "dev": "rimraf dist/* && webpack -w"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-preset-env": "^1.6.1",
     "binance": "^1.1.2",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
+    "node-fetch": "^1.7.3",
     "socket.io": "^2.0.4",
     "webpack": "^3.10.0"
   },
